<resources>

    <string name="app_name">anjilapplab1</string>
    <string name="anjil_shrestha">Anjil Shrestha!</string>
    <string name="btn1">BCA</string>
    <string name="btn2">CSIT</string>
    <string name="btn3">BBA</string>
    <string name="txt1">Enter First Number</string>
    <string name="txt2">Enter Second Number</string>
    <string name="btnAdd">Add</string>
    <string name="btnSubtract">Subtract</string>

    <string-array name="facultyname">
        <item>BCA</item>
        <item>BBA</item>
        <item>CSIT</item>
        <item>BIT</item>
    </string-array>

    <string-array name="level_list">
        <item>Bachelor</item>
        <item>Master</item>
        <item>+2</item>
        <item>Intermediate</item>
    </string-array>
    <string-array name="gender_list">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="country_list">
        <item>Nepal</item>
        <item>India</item>
        <item>China</item>
    </string-array>
</resources>